crates/seal/tests/it/generate/snapshots/it__generate__release_body__generate_release_custom_changelog_path.snap
---
source: crates/seal/tests/it/generate/release_body.rs
expression: formatted
---
{
  "body": "### Features\n\n- Custom path feature",
  "prerelease": false,
  "title": "1.0.0"
}
