crates/seal/tests/it/generate/snapshots/it__generate__release_body__generate_release_prerelease_alpha.snap
---
source: crates/seal/tests/it/generate/release_body.rs
expression: formatted
---
{
  "body": "### Breaking Changes\n\n- API changed ([#10](https://github.com/owner/repo/pull/10))",
  "prerelease": true,
  "title": "2.0.0-alpha.1"
}
