crates/seal/tests/it/generate/snapshots/it__generate__release_body__generate_release_prerelease_beta.snap
---
source: crates/seal/tests/it/generate/release_body.rs
expression: formatted
---
{
  "body": "### Improvements\n\n- Performance improvements",
  "prerelease": true,
  "title": "1.5.0-beta.2"
}
