crates/seal/tests/it/generate/snapshots/it__generate__release_body__generate_release_prerelease_rc.snap
---
source: crates/seal/tests/it/generate/release_body.rs
expression: formatted
---
{
  "body": "### Bug Fixes\n\n- Fixed critical bug",
  "prerelease": true,
  "title": "3.0.0-rc.1"
}
