crates/seal/tests/it/generate/snapshots/it__generate__release_body__generate_release_single_version.snap
---
source: crates/seal/tests/it/generate/release_body.rs
expression: formatted
---
{
  "body": "### Initial Release\n\n- First version",
  "prerelease": false,
  "title": "1.0.0"
}
