crates/seal/tests/it/generate/snapshots/it__generate__release_body__generate_release_stable_version.snap
---
source: crates/seal/tests/it/generate/release_body.rs
expression: formatted
---
{
  "body": "### Features\n\n- Added new feature ([#1](https://github.com/owner/repo/pull/1))\n\n### Contributors\n\n- [@alice](https://github.com/alice)",
  "prerelease": false,
  "title": "1.0.0"
}
